Adding scoring and text updates

--- a/index.html
+++ b/index.html
@@ -10,6 +10,18 @@
     <header>
       <h1>Rock, Paper, Scissors!</h1>
     </header>
+
+    <header id="scores">
+      <div>
+        <h2>Player</h2>
+        <div id="player-score"></div>
+      </div>
+      <div>
+        <h2>Computer</h2>
+        <div id="comp-score"></div>
+      </div>
+    </header>
+
     <main>
       <div class="btn-container">
         <button type="button" name="rock" class="btn-selection">Rock</button>
@@ -23,7 +35,6 @@
     </section>
 
     <section id="text-content">
-
     </section>
 
     <script src="script1.js"></script>
