--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
       <button class="start-btn">Start Game</button>
     </section>
 
+    <section>
+      <button class="end-btn">The End. Play again?</button>
+    </section>
+
     <section id="text-content">
     </section>
 
