--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style1.css">
   </head>
   <body>
-    <header>
+    <header id="title-header">
       <h1>Rock, Paper, Scissors!</h1>
     </header>
 
@@ -24,21 +24,21 @@
 
     <main>
       <div class="btn-container">
-        <button type="button" name="rock" class="btn-selection">Rock</button>
-        <button type="button" name="paper" class="btn-selection">Paper</button>
-        <button type="button" name="scissors" class="btn-selection">Scissors</button>
+        <button type="button" name="rock" class="btn-rock">Rock</button>
+        <button type="button" name="paper" class="btn-paper">Paper</button>
+        <button type="button" name="scissors" class="btn-scissors">Scissors</button>
       </div>
     </main>
 
-    <section>
+    <section id="start-section">
       <button class="start-btn">Start Game</button>
+    </section>
+
+    <section id="text-content">
     </section>
 
     <section>
       <button class="end-btn">The End. Play again?</button>
-    </section>
-
-    <section id="text-content">
     </section>
 
     <script src="script1.js"></script>
