--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
     <link rel="stylesheet" href="style1.css">
   </head>
   <body>
+    <div class="how-to">How to Play
+      <div class="how-to-content">
+        <ul>
+          <li>Classic Rock, Paper, Scissors.</li>
+          <li>Choose your weapon to begin each round.</li>
+          <li>Rock beats Scissors, Scissors beats Paper, Paper beats Rock.</li>
+          <li>First to 5 points wins.</li>
+        </ul>
+      </div>
+    </div>
+
+
     <header id="title-header">
       <h1>Rock, Paper, Scissors!</h1>
     </header>
