Changing how to play text

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style1.css">
   </head>
   <body>
-    <div class="how-to">How to Play
+    <div class="how-to">How to play
       <div class="how-to-content">
         <ul>
           <li>Classic Rock, Paper, Scissors.</li>
